sort.basic.lessons.sort.basic.bubble.AlgBubbleSort2.scala.error
AlgBubbleSort2:10: error: not found: value echanges
      		echanges = echanges +1
                ^